# imu_websockets

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  install_abseil.sh  install_proto_compiler.sh
.github/workflows/: pipeline.yaml
examples/: example_broadcaster.cpp  example_listener.cpp
include/: util.h  websocket_broadcaster.h  websocket_listener.h
proto/: imu_msgs.proto
